--- a/start/public_html/contacts.html
+++ b/start/public_html/contacts.html
@@ -7,7 +7,7 @@
         <!--[if lt IE 9]> 
             <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script> 
         <![endif]-->
-        <title>Divas. Контакты|Адрес|Телефоны</title>
+        <title>SiGRAND. Контакты|Адрес|Телефоны</title>
         
         <link rel="stylesheet" media="screen,projection" href="resources/css/ui.totop.css" />
         <script src="resources/js/jquery-1.7.2.min.js" type="text/javascript"></script>
@@ -23,7 +23,7 @@
  
         });
         </script>        
-        <meta name="description" content="Студия ремонта DIVAS качественно, быстро, недорого выполнит любые ремонтные работы 'под ключ' без головной боли. Тел (097) 15-16-179." />
+        <meta name="description" content="Студия ремонта SiGRAND качественно, быстро, недорого выполнит любые ремонтные работы 'под ключ' без головной боли. Тел (097) 15-16-179." />
         <meta name="keywords" content="Элитный, капитальный, качественный, косметический, комфортный, под ключ, ремонт, внутренние, наружные, отделочные, штукатурные, малярные работы" />
     </head>
     <body>
@@ -33,7 +33,7 @@
 			<div id="wrap_header">
 					<div id="logo">
 					<a href="home.html">
-					<img src="resources/img/logo.png" alt="Divas" height="67" width="212">
+					<img src="resources/img/sigrand_logo 1.png" alt="Divas" height="67" width="212">
 					</a>
 					</div>
 					<div class="head_menu">
@@ -101,7 +101,7 @@
 	<div id="bg_about">
 		<div id="wrap_about">
 			<div id="about_H">
-			Студия ремонта DIVAS.
+			Студия ремонта SiGRAND.
 			</div>
 			<div id="about_text">
 			Студия предоставляет полный комплекс профессиональных ремонтных услуг "под ключ". Мы выполним внутренние, фасадные, балконные работы быстро, качественно и недорого. А, главное, у Вас не будет "болеть голова" о том где взять хороший и недорогой стройматериал, как найти хорошего прораба, или как проконтролировать рабочих. <h3>Мы все сделаем за Вас!</h3>
@@ -112,7 +112,7 @@
     <footer>
 	<div id="bg_footer">
 		<div id="footer_text">
-		©BMExpert 2014. All rights reserved.
+		©BMExpert 2015. All rights reserved.
 		</div>
 	</div>
     </footer>	    
