--- a/start/public_html/gallery_inner.html
+++ b/start/public_html/gallery_inner.html
@@ -13,8 +13,8 @@
 	<script src="resources/js/mobilyslider.js" type="text/javascript"></script>
 	<script src="resources/js/init.js" type="text/javascript"></script>
         <!-- GALLERY_ItemsEND -->
-        <title>DIVAS. Внутренние ремонты. Элитный, капитальный, качественный, косметический, комфортный ремонт "под ключ". Внутренние, отделочные, штукатурные, малярные работы без головной боли. Поклейка обоев, выравнивание полов, электрические, сантехнические работы, перестенки, установка теплых полов.</title>
-        <meta name="description" content="Студия ремонта DIVAS качественно, быстро, недорого выполнит любые ремонтные работы 'под ключ' без головной боли. Тел (097) 15-16-179." />
+        <title>SiGRAND. Внутренние ремонты. Элитный, капитальный, качественный, косметический, комфортный ремонт "под ключ". Внутренние, отделочные, штукатурные, малярные работы без головной боли. Поклейка обоев, выравнивание полов, электрические, сантехнические работы, перестенки, установка теплых полов.</title>
+        <meta name="description" content="Студия ремонта SiGRAND качественно, быстро, недорого выполнит любые ремонтные работы 'под ключ' без головной боли. Тел (097) 15-16-179." />
         <meta name="keywords" content="Элитный, капитальный, качественный, косметический, комфортный, под ключ, ремонт, внутренние, наружные, отделочные, штукатурные, малярные работы" />
         
         <link rel="stylesheet" media="screen,projection" href="resources/css/ui.totop.css" />
@@ -39,7 +39,7 @@
 			<div id="wrap_header">
 					<div id="logo">
 					<a href="home.html">
-					<img src="resources/img/logo.png" alt="Divas" height="67" width="212">
+					<img src="resources/img/sigrand_logo 1.png" alt="Divas" height="67" width="212">
 					</a>
 					</div>
 					<div class="head_menu">
@@ -124,7 +124,7 @@
 	<div id="bg_about">
 		<div id="wrap_about">
 			<div id="about_H">
-			Студия ремонта DIVAS.
+			Студия ремонта SiGRAND.
 			</div>
 			<div id="about_text">
 			Студия предоставляет весь спектр работ по внутреннему ремонту, в том числе: поклейка обоев, выравнивание полов, электрика, сантехнические работы, перестенки, установка теплых полов.
@@ -135,7 +135,7 @@
     <footer>
 	<div id="bg_footer">
 		<div id="footer_text">
-		©BMExpert 2014. All rights reserved.
+		©BMExpert 2015. All rights reserved.
 		</div>
 	</div>
     </footer>	    
