--- a/start/public_html/contacts.html
+++ b/start/public_html/contacts.html
@@ -48,14 +48,14 @@
 			<div id="wrap_banner">
 			<div id="wrap_slogan">
 				<div id="slogan_line1_cont">
-			  г.Днепропетровск ул. Чернышевского 1а<br />
-                тел.(056)734-04-55, моб.(097)-15-16-179
+			  г.Днепропетровск, Соборная площадь, д.8<br />
+                тел.(067) 631-66-09, (050) 486-07-67
 				</div>
 				<div id="slogan_line2_cont">
-				г.Днепродзержинск ул. Медицинская 41<br />
+				г.Днепродзержинск, ул. Медицинская 41<br />
 моб. (068)-716-90-24
 				</div><div id="slogan_line3_cont">
-				г.Киев   ул. Вавиловых 18 район Сырец   тел(044)-337-18-43, моб.(097)-649-03-22. моб.(099)-932-89-90 
+				г.Киев,   ул. Вавиловых 18 район Сырец   тел(044)-337-18-43, моб.(097)-649-03-22. моб.(099)-932-89-90 
 				</div>
 			</div>
 			</div>
