service card added

--- a/start/public_html/service_card.html
+++ b/start/public_html/service_card.html
@@ -7,7 +7,7 @@
         <!--[if lt IE 9]> 
             <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script> 
         <![endif]-->
-        <title>SiGRAND Отзывы. Элитный, капитальный, качественный, косметический, комфортный ремонт.</title>
+        <title>SiGRAND Сервисная карта. Элитный, капитальный, качественный, косметический, комфортный ремонт.</title>
 
         <link rel="stylesheet" media="screen,projection" href="resources/css/ui.totop.css" />
         <script src="resources/js/jquery-1.7.2.min.js" type="text/javascript"></script>
@@ -47,63 +47,32 @@
 					</div>
 			</div>
 			<div id="wrap_banner">
-			<div id="feedback_wrap">
-			
-			<!--ADD_FEEDBACK_ZONE-->
-					<!--ITEM_START-->
-					<div class="feedback_items">
+                            <div id="feedback_wrap">
+                                <div class="feedback_items">
 					<div class="feedback_name">
-					Дмитрий (15.12.2013 18:42:46)
+					Как пользоваться сервисной картой "личный прораб"
 					</div>
 					<div class="feedback_text">
-					Проживаю по пер.Добровольцев дом 6. Заказал утепление фасада. Сделали за 2 дня в квартире намного теплее. Отказались от обогревателя. Очень доволен.
+                                            1. Звоните по телефонам 067-631-66-09, 050-486-07-67 с 9-00 до 18-00 (без выходных). Если звонок поступил после 18-00-мы перезвоним Вам утром с 9-00.
+                                        </div>
+                                        <div class="feedback_text">
+                                            2. Наш оператор задаст несколько вопросов для того, чтобы выяснить какие работы Вам необходимо выполнить и выслать к Вам нужного специалиста, в удобное для Вас время. (Выезд специалиста возможен с 7-00 до 21-00).
 					</div>
-				</div>
-				<!--ITEM_END-->
-				<!--ITEM_START-->
-				<div class="feedback_items">
-					<div class="feedback_name">
-					Александр (администратор) (26.11.2013 19:46:47)
+                                        <div class="feedback_text">
+                                            3. На объекте специалист (учитывая Ваши пожелания):<br>а) Проведет консультацию и даст рекомендации.<br>б) Составит смету или чертеж.<br> в) Заключит договор.<br> г) Примет предоплату.
 					</div>
-					<div class="feedback_text">
-					Уважаемый Дмитрий. Благодарим Вас за отзыв. Нам важно мнение наших клиентов. Если Вас в чем-то не устроило качество оказанных нами услуг, просим позвонить нам по указанным в "контактах" телефонам. С уважением, DIVAS.
+                                        <div class="feedback_text">
+                                            4. Наши исполнители приступят к работам в оговоренные сроки.
 					</div>
-				</div>
-				<!--ITEM_END-->
-				<!--ITEM_START-->
-				<div class="feedback_items">
-					<div class="feedback_name">
-					Дмитрий (25.11.2013 20:43:35)
+                                        <div class="feedback_text">
+                                           5. Работы принимаются заказчиком по акту выполненных работ. Таким образом, все заботы по поиску нужного специалиста, поиску материала, закупки, погрузки-разгрузки, доставки, организации работ, контроль качества и сроков выполненных работ, мы берем на себя (освобождая Ваше время ).
+                                            По желанию, работы могут выполняться из материалов заказчика.
 					</div>
-					<div class="feedback_text">
-					Дорого и не очень качественно!
+                                        <div class="feedback_name">
+                                            Ремонт с сервисной картой-это удобно и просто!
 					</div>
-				</div>
-				<!--ITEM_END-->
-				<!--ITEM_START-->
-				<div class="feedback_items">
-					<div class="feedback_name">
-					Мария (05.10.2013 20:54:12)
-					</div>
-					<div class="feedback_text">
-     					Все просто на высшем уровне! Сделали все быстро и качественно, а главное - не дорого! Большое Вам спасибо!!!
-					</div>
-				</div>
-				<!--ITEM_END-->
-				<!--ITEM_START-->
-				<div class="feedback_items">
-					<div class="feedback_name">
-					Евгений (05.09.2013 15:45:33)
-					</div>
-					<div class="feedback_text">
-					Здравствуйте, DIVAS! Появилось желание написать отзыв о Вашей компании, т.к. человек честный и последовательный. Проживаю я сам по адресу ул. Героев Сталинграда дом 35. Что могу сказать... Работы выполнены быстро - это полюс, материалы - не могу сказать, что "фонтан", но это лучшее соотношение цена/качества. Резюме: реально доволен проведенными работами. Спасибо.
-					</div>
-				</div>
-				<!--ITEM_END-->
-				
-			<!--ADD_FEEDBACK_ZONE_END-->
-			
-			</div>
+				</div>			
+                            </div>
 			</div>
 		</div>
 		
