--- a/start/public_html/contacts.html
+++ b/start/public_html/contacts.html
@@ -41,6 +41,7 @@
                                             <li><a href="home.html" class="padd_left"><div class="spec_padd">Главная</div></a></li>
                                             <li><a href="feedback.html"><div class="spec_padd">Отзывы</div></a></li>
                                             <li><a href="contacts.html"><div class="spec_padd">Контакты</div></a></li>
+                                            <li><a href="service_card.html"><div class="spec_padd">Сервисная карта</div></a></li>
                                             <li><a href="/divas"><div class="spec_padd">CRM</div></a></li>
 					</ul>
 					</div>
@@ -48,7 +49,7 @@
 			<div id="wrap_banner">
 			<div id="wrap_slogan">
 				<div id="slogan_line1_cont">
-			  г.Днепропетровск, Соборная площадь, д.8<br />
+			  г.Днепропетровск, ул. Фучика,18, офис 311/3<br />
                 тел.(067) 631-66-09, (050) 486-07-67
 				</div>
 				<div id="slogan_line2_cont">
