--- a/start/public_html/home.html
+++ b/start/public_html/home.html
@@ -41,6 +41,7 @@
                                             <li><a href="home.html" class="padd_left"><div class="spec_padd">Главная</div></a></li>
                                             <li><a href="feedback.html"><div class="spec_padd">Отзывы</div></a></li>
                                             <li><a href="contacts.html"><div class="spec_padd">Контакты</div></a></li>
+                                            <li><a href="service_card.html"><div class="spec_padd">Сервисная карта</div></a></li>
                                             <li><a href="/divas"><div class="spec_padd">CRM</div></a></li>
 					</ul>
 					</div>
