--- a/start/public_html/contacts.html
+++ b/start/public_html/contacts.html
@@ -39,7 +39,7 @@
 					<div class="head_menu">
 					<ul>
                                             <li><a href="home.html" class="padd_left"><div class="spec_padd">Главная</div></a></li>
-                                            <li><a href="feedback.html"><div class="spec_padd">Отзывы</div></a></li>
+                                          <!--   <li><a href="feedback.html"><div class="spec_padd">Отзывы</div></a></li> -->
                                             <li><a href="contacts.html"><div class="spec_padd">Контакты</div></a></li>
                                             <li><a href="service_card.html"><div class="spec_padd">Сервисная карта</div></a></li>
                                             <li><a href="/divas"><div class="spec_padd">CRM</div></a></li>
@@ -113,7 +113,7 @@
     <footer>
 	<div id="bg_footer">
 		<div id="footer_text">
-		©BMExpert 2015. All rights reserved.
+		©BMExpert 2016. All rights reserved.
 		</div>
 	</div>
     </footer>	    
