--- a/start/public_html/contacts.html
+++ b/start/public_html/contacts.html
@@ -49,11 +49,11 @@
 			<div id="wrap_banner">
 			<div id="wrap_slogan">
 				<div id="slogan_line1_cont">
-			  г.Днипро (Днепропетровск), ул. Фучика,18, офис 311/3
+			  г.Днепр, проспект Гагарина, 89,
                 тел.(067) 631-66-09, (050) 486-07-67
 				</div>
 				<div id="slogan_line2_cont">
-				г. Каменское (Днепродзержинск), ул. Медицинская 41
+				г. Каменское, ул. Медицинская 41
 моб. (068)-716-90-24
 				</div><div id="slogan_line3_cont">
 				г.Киев,   ул. Вавиловых 18 район Сырец   тел(044)-337-18-43, моб.(097)-649-03-22. моб.(099)-932-89-90 
